# 2026-website

./: .env.example  .gitignore  .prettierrc.toml  BREAKS_PLAN.md  README.md  SCHEDULE_PLAN.md  about.html  appscript.js  astro.config.mjs  astro_plan.md  index.html  package-lock.json  package.json  plan.md  tailwind.config.js  tailwind.config.mjs  tracks-plan.md  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  pr_build.yml  update_schedule.yml
public/: CNAME  CurlyBoi_Animated-old.json  CurlyBoi_Animated.json  llms.txt
public/files/: track-office-hours-december.ics  track-office-hours-january.ics
scripts/: .env.example  config.py  generate_graphics.py  graphics_config.py  improve_graphics.py  pretalx_questions.py  pyproject.toml  schedule_sync.py
src/: constants.ts  content.config.ts  style.css
src/components/: AfterNewsItemsSignupPrompt.astro  ConnectSubscribeGetInTouchCards.astro  ContentSection.astro  Deadline.astro  DetailArrow.astro  Footer.astro  FooterSocialLink.astro  Header.astro  HeroSection.astro  HomePageArrow.astro  ImageModal.astro  Navbar.astro  NewsItemsWidget.astro  NewsPostCard.astro  RegisterButtonCTA.astro  SideNavItem.astro  SocialLinks.astro  SubscribeModal.astro
src/content/: config.ts
src/data/: previousSponsors.ts  siteConfig.ts  workshops.ts
src/layouts/: Base.astro  BlogPost.astro  Page.astro  Splash.astro
src/pages/: conduct.astro  index.astro  news-post.astro  news.astro  refunds.astro  rss.xml.ts  sponsor.astro  (+2 more)
static/: schedule-hardcoded.html  session-index.html  session-landing.html  session-post-alt.html
(+485 files in other folders)
